--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="secondary-bg">
         <nav>
             <h3 class="nav-title">Ma<span style="color: orangered;">r</span>y</h3>
             <ul>
@@ -32,7 +32,29 @@
         </div>
     </header>
     <main>
-        
+        <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">name</p>
+                    <p class="item-description">Mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">abc@def.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Dare of Birth</p>
+                    <p class="item-description">Dec 16, 1979</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From</p>
+                    <p class="item-description">Dhaka, BD</p>
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer>
 
